good work so far

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,1 +1,9 @@
 <h1>Homepage</h1>
+
+<h3>For 120 bucks you can submit your URL here!</h3>
+
+<form action="/create" method="post">
+  <input name="url" />	
+  <input type="submit" />
+</form>
+
