--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -2,8 +2,13 @@
 
 <h3>For 120 bucks you can submit your URL here!</h3>
 
-<form action="/create" method="post">
+
+
+
+
+<!-- It will never work! -->
+<!-- <form action="/create" method="post">
   <input name="url" />	
   <input type="submit" />
-</form>
+</form> -->
 
