--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,7 +1,24 @@
 <h1>Homepage</h1>
 
-<h3>For 120 bucks you can submit your URL here!</h3>
+<!-- <h3>For 120 bucks you can submit your URL here!</h3> -->
 
+<h3> Here we can see some statistics </h3>
+
+<% @stats.limit(10).order("counter DESC").each do |url| %>
+	<ul>
+		<li><%=url.url%> <%=url.counter%></li>
+	</ul>
+<%end%>
+
+<br>
+
+<p> Here are all URL´s, in order of creation date </p>
+
+<% @stats.order("created_at DESC").each do |url| %>
+	<ul>
+		<li><%=url.url%> <%=url.counter%> <%=url.created_at%></li>
+	</ul>
+<%end%>
 
 
 
